Cleanup the code